# dr-pTECH

./: .gitignore  CERT_REPORT.md  CHAT_INTEGRATION_PROGRESS.md  CONTINUE_DECISION.md  CONTRIBUTING.md  EMAIL_TO_SECURITY.md  LEGAL_REPORT.md  LICENSE  README.md  README_CHAT_INTEGRATION.md  README_FOR_IT.md  README_master.md  SECURITY.md  SKAZKA_TERRANOVA_GDD_v02.md  SKAZKA_TERRANOVA_GDD_v02.txt  THIRD_PARTY_CREDITS.md  blastonidz_design_profile.txt  build.ps1  chat_integration.ipynb  drIpTECH_COMPLETE_EXECUTION_AND_LENDER_PACKAGE.md  drIpTECH_LENDER_BUDGET_AND_MILESTONE_SHEET.md  drIpTECH_PORTFOLIO_EXECUTION_PLAN.md  drIpTECH_STACK_ARCHITECTURE.md  driptech_jupyter_setup.ipynb  jpytr.ipynb  master  master.ps1  metadata.json  pip_licenses.md  pip_list.json  pytest.ini  set_openai_key.ps1  set_recraft_key.ps1  setup_dev_env.ps1  sign_ps_notify.ps1  test_chat_call.py  tick_gnosis.py  tommygoomba.c  tommygoomba_summary.md  tommygoomba_summary.txt  (+6 more)
.github/: pull_request_template.md
ArchesAndAngels/: .clangd  ArchesAndAngels_Sinner_of_Oblivion.c  ArchesAndAngels_Sinner_of_Oblivion.h  NANOPLAYT_PLAYHUB_STRATEGY.md  PROGRESS.md  README.md  campaign_state.json  compile_flags.txt
CongiNuroHub/: .dockerignore  Dockerfile  README.md  pyproject.toml  render.yaml  run_conginurohub.py
CongiNuroHub/assets/recraft/: conginurohub_gui_pass_800_manifest.json
CongiNuroHub/conginurohub/: __init__.py  model.py  server.py
CongiNuroHub/conginurohub/data/: artisapiens_seed_v1.json
CongiNuroHub/conginurohub/web/: app.js  index.html  styles.css
CongiNuroHub/docs/: deployment.md  mathematical_model.md  raw_tick_kernel.asm
CongiNuroHub/tests/: test_model.py
DoENGINE/: DODOGame.cmd  DOENGINE_PROGRESS.md  DemoHub.cmd  DoENGINEStudio.cmd  README.md  bango_integration_paths.py  package.json
IllusionCanvasInteractive/: IllusionCanvasInteractive.cmd  IllusionCanvasStudio.cmd  README.md  run_illusioncanvas.py  run_illusioncanvas_studio.py
JumpClip/: README.md  pyproject.toml
JumpClip/examples/: sample_references.json
JumpClip/src/jumpclip/: __init__.py  analysis.py  cli.py  models.py  reference_sources.py  render.py
JumpClip/src/jumpclip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
JumpClip/tests/: test_jumpclip.py
KaijuGaiden/: Kaiju_Gaiden_Consolidated_GDD_Asset_Manifest.md  Kaiju_Gaiden_GDD_draft.md  Kaiju_Gaiden_GDD_full.txt  Kaiju_Gaiden_Production_Spec.md  Kaiju_Gaiden_lore.txt  Makefile  Preference_Profiling_Terms_Draft.md  README_CIA_TOOLING.md  README_NDSX.md  README_PROTOTYPE.md  build_pd.err  host_check_tk.py  host_graphical.py  host_sim.py  host_sim.spec  kaiju_gaiden_asset_manifest.json  kaijugaiden.c  kaijugaiden_gba.c  kaijugaiden_gui.spec  kaijugaiden_manual.asm  kaijugaiden_manual.ihx  kaijugaiden_manual.lst  kaijugaiden_manual.sym  kaijugaiden_test.asm  kaijugaiden_test.lst  kaijugaiden_test.sym  kaijugaiden_verify.asm  kaijugaiden_verify.lst  requirements-graphical.txt  run_qaijockey.py  syntax_pd.err
KaijuGaiden/idtech2_port/: CMakeLists.txt  README.md  main_demo.c  sprite_renderer.c  sprite_renderer.h
KrabSurf/: README.md  krabsurf.py  launch_krabsurf.ps1  stores.json
NeoWakeUP/: .gitignore  PUBLIC_REPO_CHECKLIST.md  README.md  build_neowakeup_recraft_manifests.py  export_public_samples.py  pyproject.toml  render_public_preview.py  run_control_hub.py  run_engine_api.py  run_erpsequencer.py  run_neowakeup_recraft_pass.py  run_planetary_mind.py  run_qaijockey.py
NeoWakeUP/Bango-Patoot/: README.md
NeoWakeUP/Bango-Patoot/egoassurance/: __init__.py  spectrumexprncs.py
NeoWakeUP/assets/recraft/: neowakeup_dial_knob_corrective_v2_manifest.json  neowakeup_gui_pass_300_corrective_manifest.json  neowakeup_gui_pass_300_manifest.json  neowakeup_gui_pass_600_manifest.json
NeoWakeUP/neowakeup/: __init__.py  api_server.py  directive_bridge.py  relationships.py  runner.py
NeoWakeUP/neowakeup/assets/: __init__.py  recraft_manifests.py  run_recraft_pass.py
NeoWakeUP/neowakeup/hub/: __init__.py  control_hub.py
NeoWakeUP/neowakeup/packaging/: __init__.py  preview_render.py  public_samples.py
NeoWakeUP/neowakeup/planetary/: __init__.py  cli.py  equations.py  erp_cli.py  erpsequencer.py  models.py  network.py
NeoWakeUP/neowakeup/qaijockey/: __init__.py  jockey.py  persistence.py  platforms.py  profiles.py  recorder.py  vision.py
NeoWakeUP/public_preview/: preview_metadata.json
NeoWakeUP/public_samples/: README_samples.json  sample_planetary_mind.json  sample_qaijockey_genome.json
ORBEngine/: ORBEngine_ARCHITECTURE.md  ORBEngine_DEVELOPMENT_PLAN.md  ORBEngine_FULL_TODO.md  README.md  build_innsmouth_island.ps1  build_innsmouth_island_research.ps1  build_tutorial_demo.ps1
SkriptViu/: drIpTECH_SkriptViu.c  drIpTECH_SkriptViu_v0002.c  test_SkriptViu.c
WialWohm/: Makefile  README.md  test_data.py
YOIT/: limgyuit.txt
aridfeihth/: ARIDFEIHTH_GAMEPLAY_SYSTEMS.md  ARIDFEIHTH_RESEARCH_AND_GAMEPLAY_FOUNDATION.md  PROGRESS.md
bango-patoot_3DS/: ASSET_NOMENCLATURE_PROTOCOL.md  ASSET_TO_3D_RECONSTRUCTION_PIPELINE.md  BANGO_PATOOT_FULL_GDD.md  BANGO_PATOOT_FULL_GDD.txt  BANGO_PATOOT_PROJECT_ANALYSIS_REPORT.md  (+13 more)
bango-patoot_3DS/idtech2_mod/: CMakeLists.txt  README.md  build_instructions.txt
bango-patoot_3DS/idtech2_mod/game/: bango_game.c
orbseeker/idtech2_mod/: CMakeLists.txt  README.md  build_instructions.txt
orbseeker/idtech2_mod/game/: orbseeker_game.c
orbseeker/idtech2_mod/maps/: orb_island.map
skazka_terranova_c/: CMakeLists.txt  PROGRESS.md  README.md
skazka_terranova_c/farim/: FARIM_SPEC.md  PORTAL_INTEGRATION.md
skazka_terranova_c/farim/player/: README.md  index.html  player.js  styles.css
skazka_terranova_c/src/: game.c  game.h  main.c
skazka_terranova_c/tools/: build_farim.py  unpack_farim.py
speech_to_text_google/: .gitignore  README.md  __init__.py  google_speech_to_text.py  pyproject.toml
speech_to_text_google/tests/: test_google_stt.py
urbden-android/app/src/main/cpp/: CMakeLists.txt  economy.c  economy.h  generator.c  generator.h  native-lib.c  npc.c  npc.h  seed_asm.S  world.c  world.h
(+827 files in other folders)
