[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conginurohub"
version = "0.1.0"
description = "Browser-accessible educational cognition simulation hub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["conginurohub*"]